Migliorata implementazione impostazioni analisi
